--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
                 <span>Dashboard</span>
             </a>
 
-            <a mat-list-item [routerLink]="'/home/file-upload'" [routerLinkActive]="['is-active']">
+            <a mat-list-item [routerLink]="'/home/file-list'" [routerLinkActive]="['is-active']">
                 <mat-icon>library_books</mat-icon>
                 <span class="list-item"> Archivos</span>
             </a>
