--- a/src/app/components/patient/patient/patient.component.scss
+++ b/src/app/components/patient/patient/patient.component.scss
@@ -1,5 +1,10 @@
-mat-card{
-    margin: 5px;
+.consult-container{
+    max-width: 300px;
+}
+
+.consult-container{
+    max-width: 300px;
+    float: left;
 }
 
 button{
