--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,8 +2,7 @@
 
     <mat-progress-bar *ngIf="isLoading" color="primary" mode="indeterminate">
     </mat-progress-bar>
-
-    <div class="logo">LOGO APLICACIÓN</div>
+    <div><img class="logo" src="../../../assets/img/logo.png"></div>
     <div mat-card-image></div>
 
     <mat-card-content>
@@ -16,7 +15,8 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Usuario</mat-label>
                     <input matInput formControlName="username">
-                    <mat-error *ngIf="signUpForm.controls['username'].errors?.required">Ingrese un nombre de usuario</mat-error>
+                    <mat-error *ngIf="signUpForm.controls['username'].errors?.required">Ingrese un nombre de usuario
+                    </mat-error>
                 </mat-form-field>
             </p>
             <p>
@@ -31,11 +31,12 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Confirmar contraseña</mat-label>
-                    <input type="password" matInput formControlName="confirmation">
+                    <input type="password" matInput formControlName="confirmation" [errorStateMatcher]="matcher">
                     <mat-error *ngIf="signUpForm.controls['confirmation'].errors?.required">Repita su contraseña
                     </mat-error>
-                    <mat-error *ngIf="!signUpForm.controls['confirmation'].errors?.required && signUpForm.errors?.passwordsNotEqual">Las
-                    contraseñas no coinciden</mat-error>
+                    <mat-error
+                        *ngIf="!signUpForm.controls['confirmation'].errors?.required && signUpForm.errors?.passwordsNotEqual">
+                        Lascontraseñas no coinciden</mat-error>
                 </mat-form-field>
             </p>
             <p>
@@ -49,7 +50,8 @@
 
 
             <p>
-                <button mat-raised-button color="primary" type="submit"  [disabled]="signUpForm.invalid">Aceptar</button>
+                <button mat-stroked-button color="primary" [routerLink]="'login'">Regresar</button>
+                <button mat-raised-button color="primary" type="submit" [disabled]="signUpForm.invalid">Aceptar</button>
             </p>
 
         </form>
