Auth image pipe implemented

--- a/src/app/components/file/file-list/file-list.component.html
+++ b/src/app/components/file/file-list/file-list.component.html
@@ -4,7 +4,7 @@
             <mat-icon>delete</mat-icon>
     </button>
     <!-- <mat-checkbox color="primary" [value]="dbFile.checked" (change)="checkUndcheck(file)"></mat-checkbox> -->
-    <img [src]="'/api/files/preview/'+file.id">
+    <img [src]="'/api/files/preview/'+file.id | authImage | async">
 </mat-card>
 
 <button mat-fab color="accent" class="bottom-right" [routerLink]="'/home/file-upload'">
