--- a/src/app/components/patient/patient/patient.component.html
+++ b/src/app/components/patient/patient/patient.component.html
@@ -16,6 +16,6 @@
         <app-consult-list [id]="patient.id"></app-consult-list>
     </div>
     <div class="editor-container">
-            <!-- <app-consult-edit></app-consult-edit> -->
+            <app-consult-edit></app-consult-edit>
     </div>
 </div>
