--- a/src/app/components/role/role-form/role-form.component.html
+++ b/src/app/components/role/role-form/role-form.component.html
@@ -31,5 +31,5 @@
 
     <button mat-button color="primary" (click)="cancel()">Cancelar</button>
     <button mat-raised-button color="primary" [disabled]="roleForm.invalid"
-        [mat-dialog-close]="roleForm.value">Agregar</button>
+        [mat-dialog-close]="roleForm.value">Guardar</button>
 </div>
