--- a/src/app/components/patient/patient-list/patient-list.component.html
+++ b/src/app/components/patient/patient-list/patient-list.component.html
@@ -90,8 +90,12 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <mat-paginator #paginator [length]="length" [pageIndex]="pageIndex" [pageSize]="pageSize"
-    [pageSizeOptions]="[5, 10, 25, 50]" (page)="getServerData($event)">
+  <mat-paginator #paginator 
+  [length]="length" 
+  [pageIndex]="pageIndex" 
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 25, 50]" 
+  (page)="getServerData($event)">
   </mat-paginator>
 
 </div>
