Loading progress bar was changed for spinner

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -73,3 +73,9 @@ a span {
   height: 100vh;
   padding: 5% 20px 0px 20px;
 }
+
+mat-progress-spinner{
+  position: fixed !important;
+  top:15%;
+  right: 40%;
+}
