--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -58,8 +58,7 @@
 
 
             <mat-divider></mat-divider>
-            <button mat-menu-item 
-            (click)="changeTheme()">
+            <button mat-menu-item (click)="changeTheme()">
                 <mat-icon>emoji_objects</mat-icon>
                 <span>Tema oscuro</span>
                 <mat-slide-toggle color="accent" 
@@ -80,9 +79,10 @@
 
         <img class="avatar-img" src="../../../assets/img/avatar-default.png" [matMenuTriggerFor]="settingsMenu">
 
-
-        <mat-progress-bar *ngIf="loading" color="accent" mode="indeterminate">
-        </mat-progress-bar>
+        <div class="background-spinner" *ngIf="loading">
+            <mat-progress-spinner [diameter]="50" [strokeWidth]="5" color="primary" mode="indeterminate">
+            </mat-progress-spinner>
+            </div>
         <div class="container">
             <router-outlet></router-outlet>
         </div>
