--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,11 +24,13 @@
                 <span class="list-item">Pacientes</span>
             </a>
 
-            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/user-list'" [routerLinkActive]="['is-active']">
+            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/user-list'"
+                [routerLinkActive]="['is-active']">
                 <mat-icon>supervisor_account</mat-icon>
                 <span class="list-item">Usuarios</span>
             </a>
-            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/role-list'" [routerLinkActive]="['is-active']">
+            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/role-list'"
+                [routerLinkActive]="['is-active']">
                 <mat-icon>check</mat-icon>
                 <span class="list-item">Roles</span>
             </a>
@@ -61,10 +63,7 @@
             <button mat-menu-item (click)="changeTheme()">
                 <mat-icon>emoji_objects</mat-icon>
                 <span>Tema oscuro</span>
-                <mat-slide-toggle color="accent" 
-                [checked]="slideBool" 
-                [disabled]="true"
-                style="margin-left: 30px;">
+                <mat-slide-toggle color="accent" [checked]="slideBool" [disabled]="true" style="margin-left: 30px;">
                 </mat-slide-toggle>
             </button>
             <button mat-menu-item>
@@ -82,7 +81,7 @@
         <div class="background-spinner" *ngIf="loading">
             <mat-progress-spinner [diameter]="50" [strokeWidth]="5" color="primary" mode="indeterminate">
             </mat-progress-spinner>
-            </div>
+        </div>
         <div class="container">
             <router-outlet></router-outlet>
         </div>
