DTO Objects has been modified

--- a/src/app/components/consult/consult-list/consult-list.component.html
+++ b/src/app/components/consult/consult-list/consult-list.component.html
@@ -18,7 +18,7 @@
         <button mat-icon-button color="primary" [routerLink]="['/home/consult-edit', consult.id]">
             <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button style="color: rgb(207, 75, 75);" (click)="deleteConsult(consult.id)">
+        <button mat-icon-button style="color: rgb(207, 75, 75);" (click)="deleteConsultButton(consult.id)">
             <mat-icon>delete</mat-icon>
         </button>
         <!-- <button mat-raised-button color="primary" [routerLink]="['/home/consult', consult.id]">
