--- a/src/app/components/role/role-form/role-form.component.html
+++ b/src/app/components/role/role-form/role-form.component.html
@@ -16,7 +16,7 @@
                 <mat-label>Roles</mat-label>
                 <mat-select multiple formControlName="privileges">
                     <mat-option *ngFor="let privilege of privilegesList" [value]="privilege">
-                        {{privilege.privilegename}}
+                        {{privilege}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
