--- a/src/app/components/user/user-edit/user-form.component.html
+++ b/src/app/components/user/user-edit/user-form.component.html
@@ -34,7 +34,7 @@
                 <mat-label>Roles</mat-label>
                 <mat-select multiple formControlName="roles">
                     <mat-option *ngFor="let role of rolesList" [value]="role">
-                        {{role.rolename}}
+                        {{role}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
