--- a/src/app/components/consult/consult-edit/consult-edit.component.scss
+++ b/src/app/components/consult/consult-edit/consult-edit.component.scss
@@ -12,6 +12,6 @@
 }
 
 ::ng-deep .angular-editor-toolbar{
-  //background: rgba(0,0,0,0) !important;
-  //border: none !important;
+  background: rgba(0,0,0,0) !important;
+  border: none !important;
 }
