--- a/src/app/components/consult/consult-list/consult-list.component.html
+++ b/src/app/components/consult/consult-list/consult-list.component.html
@@ -21,12 +21,14 @@
         <button mat-icon-button style="color: rgb(207, 75, 75);" (click)="deleteConsultButton(consult.id)">
             <mat-icon>delete</mat-icon>
         </button>
-        <!-- <button mat-raised-button color="primary" [routerLink]="['/home/consult', consult.id]">
+        <!-- 
+            <button mat-raised-button color="primary" [routerLink]="['/home/consult', consult.id]">
             Abrir
-        </button> -->
+        </button> 
         <mat-card-content>
             <p [innerHTML]="consult.description"></p>
         </mat-card-content>
+        -->
     </mat-card>
 
 </div>
