--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,13 +24,11 @@
                 <span class="list-item">Pacientes</span>
             </a>
 
-            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/user-list'"
-                [routerLinkActive]="['is-active']">
+            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/user-list'" [routerLinkActive]="['is-active']">
                 <mat-icon>supervisor_account</mat-icon>
                 <span class="list-item">Usuarios</span>
             </a>
-            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/role-list'"
-                [routerLinkActive]="['is-active']">
+            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/role-list'" [routerLinkActive]="['is-active']">
                 <mat-icon>check</mat-icon>
                 <span class="list-item">Roles</span>
             </a>
@@ -78,9 +76,11 @@
 
         <img class="avatar-img" src="../../../assets/img/avatar-default.png" [matMenuTriggerFor]="settingsMenu">
 
-        <div class="background-spinner" *ngIf="loading">
-            <mat-progress-spinner [diameter]="50" [strokeWidth]="5" color="primary" mode="indeterminate">
-            </mat-progress-spinner>
+        <div class="overlay" *ngIf="loading">
+            <div class="center">
+                <mat-progress-spinner [diameter]="50" [strokeWidth]="5" color="primary" mode="indeterminate">
+                </mat-progress-spinner>
+            </div>
         </div>
         <div class="container">
             <router-outlet></router-outlet>
