--- a/src/app/components/patient/patient-list/patient-list.component.html
+++ b/src/app/components/patient/patient-list/patient-list.component.html
@@ -2,15 +2,22 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<mat-card>
+<!-- <mat-card>
   <mat-form-field>
     <input matInput (keyup)="filterField($event.target.value)" placeholder="Buscar" [(ngModel)]="filterValue">
     <button mat-button *ngIf="filterValue!=''" matSuffix mat-icon-button (click)="clear()">
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
-</mat-card>
+</mat-card> -->
 
+<mat-paginator #paginator 
+[length]="length" 
+[pageIndex]="pageIndex" 
+[pageSize]="pageSize"
+[pageSizeOptions]="[5, 10, 25, 50]" 
+(page)="getServerData($event)">
+</mat-paginator>
 <div class="mat-elevation-z8">
 
   <mat-table [dataSource]="patients">
@@ -90,12 +97,5 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <mat-paginator #paginator 
-  [length]="length" 
-  [pageIndex]="pageIndex" 
-  [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 25, 50]" 
-  (page)="getServerData($event)">
-  </mat-paginator>
-
 </div>
+
